# meter_Hw4

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: Meter_A.txt
notebooks/: 1.0_DataLoading.ipynb  2.0_Test_DataLoading.ipynb  3.0_Model_built.ipynb  4.0_Test_Model_built.ipynb
src/: data_preprocess.py  model_builder.py
src/meter/: data_preprocess.py  model_builder.py
